--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "A project that does something awesome",
 	"keywords": [ "freecodecamp", "nodejs", "package.json", "api", "microservice" ],
 	"license": "MIT",
+	"version": "1.0.0",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
