--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-	"name": "fcc-learn-npm-package-json",
+	"name": "api-and-microservice",
 	"author": "hammerStrike",
 	"description": "A project that does something awesome",
-	"keywords": [ "freecodecamp", "nodejs", "package.json", "api", "microservice" ],
+	"keywords": [
+		"freecodecamp",
+		"nodejs",
+		"package.json",
+		"api",
+		"microservice"
+	],
 	"license": "MIT",
 	"version": "1.0.0",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+		"moment": "2.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
