--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"version": "1.0.0",
 	"dependencies": {
 		"moment": "2.14.0",
-		"express": "^4.14.0",
+		"express": "^4.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
